--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nxtlvlgg/xloop#readme",
   "dependencies": {
-    "async": "^2.0.0-rc.2"
+    "async": "^2.0.0-rc.2",
+    "loopback": "^2.27.0"
   }
 }
