--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/nxtlvlgg/xloop.git"
   },
-  "author": "Josh Elias",
+  "author": "Next Level Media",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nxtlvlgg/xloop/issues"
